# chdb-aws

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.claude/skills/generate-schema/: SKILL.md
.claude/skills/query-asset/: SKILL.md
.zed/: settings.json
docker/: Dockerfile
docs/: architecture-review.md  iceberg-management.md
scripts/: build-image.sh  generate_test_data.py  push-image.sh  query.py
scripts/demo/: README.md  _helpers.py  populate.py  query_anomalies.py  query_performance.py  query_traffic.py
src/chdb_aws/: __main__.py  config.py  handler.py  logging.py  main.py  query.py
src/chdb_aws/read/: handler.py  query.py
src/chdb_aws/write/: archiver.py  handler.py  iceberg_writer.py
terraform/bootstrap/: main.tf  terraform.tfvars  variables.tf  versions.tf
terraform/main/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
terraform/modules/chdb_aws/: data_bucket.tf  ecr.tf  glue.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3_tables.tf  variables.tf
terratest/: chdb_aws_test.go  go.mod  go.sum
terratest/dev/: dev.tfvars  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
tests/: conftest.py
tests/unit/: test_archiver.py  test_config.py  test_handler.py  test_main.py  test_read_handler.py  test_write_handler.py
